--- a/modules/tasks/client/apps/manage-comments/manage-comments.html
+++ b/modules/tasks/client/apps/manage-comments/manage-comments.html
@@ -80,7 +80,6 @@
 				<select ng-model="taskManComm.bucketFilter" ng-options="group for group in taskManComm.bucketGroups" class="form-control input-sm">
 					<option value=''>Any</option>
 				</select>
-
 			</div>
 
 		</div>
@@ -105,7 +104,9 @@
 			<tr
 				ng-repeat="com in commentsFiltered = (taskManComm.comments | advancedFilter:taskManComm.filterKeyword | filter:taskManComm.bucketFilter | filter:{'overallStatus': taskManComm.overallStatusFilter}  | filter:{'eaoStatus': taskManComm.eaoStatusFilter} | filter:{'proponentStatus': taskManComm.proponentStatusFilter}) track by $index"
 				ng-class="{'bg-danger': com.overallStatus === 'Rejected', 'bg-info': com.overallStatus === 'In Progress'}"
-				x-modal-comment-detail x-comment='com' x-project='taskManComm.project'>
+				x-modal-comment-detail
+				x-comment='com'
+				x-project='taskManComm.project'>
 				<td>
 					<div ng-show="!taskManComm.activeComments[com._id]">
 						<pre>{{ com.comment | max15Words }}</pre>
