--- a/modules/tasks/client/apps/manage-comments/modal-comment-detail.html
+++ b/modules/tasks/client/apps/manage-comments/modal-comment-detail.html
@@ -1,10 +1,11 @@
 <div class="modal-header">
+	<button class="btn btn-default btn-sm pull-right" type="button" ng-click="taskComDetail.cancel()">Close</button>
 	<h3 class="modal-title">Comment Detail</h3>
 </div>
 
-<div class="modal-body">
+<div class="modal-body" style="padding: 0">
 
-	<tmpl-classify-public-comment x-comment="taskComDetail.comment" x-project="taskComDetail.project"></tmpl-classify-public-comment>
+	<tmpl-classify-public-comment x-comment="taskComDetail.comment" x-project="taskComDetail.project" x-single="true"></tmpl-classify-public-comment>
 
 </div>
 
