--- a/modules/tasks/client/apps/public-comment-classification-proponent/public-comment-classification-proponent.html
+++ b/modules/tasks/client/apps/public-comment-classification-proponent/public-comment-classification-proponent.html
@@ -30,8 +30,8 @@
 		</div>
 	</div>
 	<table class="table table-condensed">
-		<thead>
-			<tr ng-show="taskPubComClassProp.showFilter" class="panel-sub-heading">
+		<thead >
+			<tr ng-show="taskPubComClassProp.showFilter" class="panel-sub-heading" ng-if="0">
 				<td class="text-right form-inline">
 
 					<div class="form-group pull-left">
@@ -77,7 +77,7 @@
 			</tr>
 			<tr class="small">
 				<th>
-					<a href class="pull-right" ng-click="taskPubComClassProp.showFilter = !taskPubComClassProp.showFilter"><span class="glyphicon glyphicon-search"></span></a>
+					<a href class="pull-right" ng-if="0" ng-click="taskPubComClassProp.showFilter = !taskPubComClassProp.showFilter"><span class="glyphicon glyphicon-search"></span></a>
 					Comment
 				</th>
 			</tr>
@@ -86,7 +86,7 @@
 			<tr ng-repeat="com in filteredComments = (taskPubComClassProp.data.comments | filter:{proponentStatus: taskPubComClassProp.filter}:true | filterClassifyComments:taskPubComClassProp.filterScopeComments:taskPubComClassProp.filterKeyword) track by $index"
 			ng-class="{'bg-warning':taskPubComClassProp.activeComment._id === com._id}">
 
-				<td ng-if="taskPubComClassProp.activeComment._id === com._id">
+				<td ng-if="taskPubComClassProp.activeComment._id === com._id" style="padding: 5px 0">
 
 					<tmpl-classify-public-comment x-comment="com" x-project="taskPubComClassProp.project"></tmpl-classify-public-comment>
 
