--- a/modules/tasks/client/apps/public-comment-vetting/public-comment-vetting.html
+++ b/modules/tasks/client/apps/public-comment-vetting/public-comment-vetting.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="panel-sub-heading">
 		<div class="btn-group btn-group-justified" ng-init="taskPubComVet.filter = 'Unvetted'">
-			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Unvetted'}"	ng-click="taskPubComVet.filter = 'Unvetted'">Unvetted ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Unvetted'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
+			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Unvetted'}"	ng-click="taskPubComVet.filter = 'Unvetted'">Unvetted</a>
 			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Published'}"	ng-click="taskPubComVet.filter = 'Published'">Published ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Published'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
 			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Rejected'}"	ng-click="taskPubComVet.filter = 'Rejected'">Rejected ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Rejected'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
 			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Spam'}"		ng-click="taskPubComVet.filter = 'Spam'">Spam ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Spam'} :true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
