--- a/modules/tasks/client/apps/public-comment-vetting/public-comment-vetting.html
+++ b/modules/tasks/client/apps/public-comment-vetting/public-comment-vetting.html
@@ -62,11 +62,29 @@
 						</li>
 						<li ng-show="taskPubComVet.rejectWarning">
 							<div class="alert alert-danger small" style="margin-bottom: 0;">
-								<div class="pull-right" style="margin-top: -4px;">
-									<a href class="btn btn-default btn-xs" ng-click="taskPubComVet.rejectWarning = false">No</a>
-									<a href class="btn btn-default btn-xs" ng-click="taskPubComVet.workingStatus = 'Rejected'">Yes, Reject</a>
+
+								<div class="form-group">
+									<label class="control-label text-danger">Rejection Reason</label>
+									<select ng-model="com.rejectedReason" ng-options="reason for reason in taskPubComVet.rejectReasons" class="form-control input-sm">
+									</select>
 								</div>
-								Confirm Reject?
+
+								<div class="form-group">
+									<label class="control-label text-danger">
+										Rejection Notes
+									</label>
+									<textarea class="form-control input-sm" ng-model="com.rejectedNotes" rows=4></textarea>
+								</div>
+
+								<div class='form-group'>
+									<div class="pull-right" style="margin-top: -4px;">
+										<a href class="btn btn-default btn-xs" ng-click="taskPubComVet.rejectWarning = false">No</a>
+										<a href class="btn btn-default btn-xs" ng-click="taskPubComVet.workingStatus = 'Rejected'">Yes, Reject</a>
+									</div>
+									Confirm Reject?
+								</div>
+
+								<span class="help-block text-danger">When finished, click Next Comment.</span>
 							</div>
 						</li>
 						<li class="text-right">
