--- a/modules/activities/processes/section101c/client/section101c.html
+++ b/modules/activities/processes/section101c/client/section101c.html
@@ -1,14 +1,20 @@
-<div class="panel panel-default">
-	<div class="panel-heading">
-		Start Process: {{ processestartProcess.task.name }} <em class="small pull-right">{{ processestartProcess.task.status }}</em>
+<section class="panel panel-default">
+
+	<div class="block-content">
+		<h3>Generate Section 10(1)c</h3>
+
+		<div class='panel-body'>
+
+
+		</div> <!-- /panelbody -->
+
 	</div>
-	<div class="panel-body">
-		<p>{{ processestartProcess.task.description }}</p>
+
+	<div class="block-content">
+		<h3>Notify</h3>
+
+		<tmpl-notifications x-project=""></tmpl-notifications>
+
 	</div>
-	<div class="panel-footer text-right">
-		<div class="form-control-static" ng-show="processestartProcess.data.startTime">
-			Process Started: {{ processestartProcess.data.startTime  | amDateFormat:'MMM Do, YYYY hh:mm a' }}
-		</div>
-		<a class="btn btn-success" href ng-click="processestartProcess.startProcess()" ng-show="!processestartProcess.data.startTime">Start Process</a>
-	</div>
-</div>
+
+</section> <!-- /panel -->
