New processes, move configuration over to new format.

--- a/modules/activities/processes/section101c/client/section101c.html
+++ b/modules/activities/processes/section101c/client/section101c.html
@@ -4,7 +4,7 @@
 		<h3>Generate Section 10(1)c</h3>
 
 		<div class='panel-body'>
-
+		Review and Generate
 
 		</div> <!-- /panelbody -->
 
@@ -13,7 +13,7 @@
 	<div class="block-content">
 		<h3>Notify</h3>
 
-		<tmpl-notifications x-project=""></tmpl-notifications>
+		<tmpl-notifications x-project="processSection101c.project"></tmpl-notifications>
 
 	</div>
 
