--- a/modules/activities/processes/section11/client/section11.html
+++ b/modules/activities/processes/section11/client/section11.html
@@ -1,20 +1,13 @@
 <section class="panel panel-default">
 
 	<div class="block-content">
-		<h3>Generate Section 11</h3>
-
-		<div class='panel-body'>
-			Review and Generate
-
-		</div> <!-- /panelbody -->
-
+		<h3>Confirm Content</h3>
+		<tmpl-generate-section-11 x-project="processSection11.project"></tmpl-generate-section-11>
 	</div>
 
 	<div class="block-content">
 		<h3>Notify</h3>
-
 		<tmpl-notifications x-project=""></tmpl-notifications>
-
 	</div>
 
 </section> <!-- /panel -->
