federal substitution ui

--- a/modules/activities/processes/federal-substitution/client/federal-substitution.html
+++ b/modules/activities/processes/federal-substitution/client/federal-substitution.html
@@ -2,7 +2,17 @@
 
 	<div class="block-content">
 		<h3>Federal Substitution</h3>
+		<tmpl-federal-substitution-request x-project="processFedSub.project"></tmpl-federal-substitution-request>
+	</div>
 
+	<div class="block-content">
+		<h3>Announce Project</h3>
+		<tmpl-notifications x-project="processFedSub.project"></tmpl-notifications>
+	</div>
+
+	<div class="block-content">
+		<h3>Federal Substitution Decision</h3>
+		<tmpl-federal-substitution-decision x-project="processFedSub.project"></tmpl-federal-substitution-decision>
 	</div>
 
 </section> <!-- /panel -->
