--- a/modules/activities/processes/federal-substitution/client/federal-substitution.html
+++ b/modules/activities/processes/federal-substitution/client/federal-substitution.html
@@ -1,18 +1,19 @@
 <section class="panel panel-default">
-
 	<div class="block-content">
-		<h3>Federal Substitution</h3>
-		<tmpl-federal-substitution-request x-project="processFedSub.project"></tmpl-federal-substitution-request>
+		<h3>Federal Substitution Request</h3>
+		<tmpl-federal-request x-project="processFedSub.project"></tmpl-federal-request>
 	</div>
+</section>
 
+<section class="panel panel-default">
 	<div class="block-content">
-		<h3>Announce Project</h3>
+		<h3>Notify</h3>
 		<tmpl-notifications x-project="processFedSub.project"></tmpl-notifications>
 	</div>
-
+</section>
+<section class="panel panel-default">
 	<div class="block-content">
 		<h3>Federal Substitution Decision</h3>
-		<tmpl-federal-substitution-decision x-project="processFedSub.project"></tmpl-federal-substitution-decision>
+		<tmpl-federal-decision x-project="processFedSub.project"></tmpl-federal-decision>
 	</div>
-
 </section> <!-- /panel -->
