--- a/modules/activities/processes/section101c/client/section101c.html
+++ b/modules/activities/processes/section101c/client/section101c.html
@@ -1,13 +1,13 @@
 <section class="panel panel-default">
-
 	<div class="block-content">
 		<h3>Confirm Content</h3>
 		<tmpl-generate-section-101-c x-project="processSection101c.project"></tmpl-generate-section-101-c>
 	</div>
+</section>
 
+<section class="panel panel-default">
 	<div class="block-content">
 		<h3>Notify</h3>
 		<tmpl-notifications x-project="processSection101c.project"></tmpl-notifications>
 	</div>
-
 </section> <!-- /panel -->
