Engage Working Group UI.

--- a/modules/activities/controls/federal-decision/client/fed-dec.html
+++ b/modules/activities/controls/federal-decision/client/fed-dec.html
@@ -14,4 +14,8 @@
 			<textarea ui-tinymce rows="10" ng-model="ctrlFedDec.decision.summary" class="form-control"></textarea>
 		</div>
 	</div>
+	<hr/>
+	<div class="text-right">
+		<a class="btn btn-default" href ng-click="taskNotifications.saveProcess()">Save</a>
+	</div>	
 </div>
