--- a/modules/activities/processes/engage-wg/client/engage-wg.html
+++ b/modules/activities/processes/engage-wg/client/engage-wg.html
@@ -1,10 +1,170 @@
 <section class="panel panel-default">
-
 	<div class="block-content">
-		<h3>Engage Working Group</h3>
+		<h3>Working Group Engagement</h3>
 
-		<tmpl-notifications x-project=""></tmpl-notifications>
+		<div class="panel-body">
+			<!-- START/END DATE -->
+			<div class="row">
+				<div class="col-sm-3">
+					<div class="form-group">
+						<label class="control-label">Content for Review</label>
+						<select ng-model="processEngageWG.config.content" class="form-control">
+							<option value="projectdescription">Project Description</option>
+							<option value="draftair">Draft AIR</option>
+							<option value="air">AIR</option>
+							<option value="application">Application</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label class="control-label">Working Group Session Open</label>
 
+						<div class="input-group">
+							<input type="text"
+								class="form-control text-center"
+								ng-model="processEngageWG.config.dateOpen"
+								ng-disabled="1"/>
+							<div x-modal-date-picker
+								x-selected-date="processEngageWG.config.dateOpen"
+								class="input-group-addon btn-default">
+							<i class="glyphicon glyphicon-calendar"></i></div>
+						</div>
+										
+					</div>
+					<div class="form-group">
+						<label class="control-label">Working Group Session Close</label>
+
+						<div class="input-group">
+							<input type="text"
+								class="form-control text-center"
+								ng-model="processEngageWG.config.dateClose"
+								ng-disabled="1"/>
+							<div x-modal-date-picker
+								x-selected-date="processEngageWG.config.dateClose"
+								class="input-group-addon btn-default">
+							<i class="glyphicon glyphicon-calendar"></i></div>
+						</div>
+
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<label class="control-label">Select Applicable Roles</label>
+					<div class="well well-sm">
+						<ul class="list-unstyled task-list">
+							<li ng-repeat="role in ['admin', 'project-team', 'working-group', 'first-nations', 'consultant']">
+								<button class="btn btn-block btn-sm btn-layer btn-default"
+									ng-click="processEngageWG.chosenRoles[role] = !processEngageWG.chosenRoles[role]"
+									ng-class="{'btn-success': processEngageWG.chosenRoles[role]}">{{ role }}</button>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<label class="control-label">Instructions to Working Group</label>
+					<textarea ui-tinymce="{statusbar: false, menubar: ''}" rows="6" ng-model="processEngageWG.config.instructions" class="form-control"></textarea>
+				</div>
+
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="panel panel-default">
+	<div class="block-content block-stacked">
+		<h3>Content for Review</h3>
+
+		<div class="panel-body no-vertical-padding">
+			<div class="row block-section" ng-show="processEngageWG.config.instructions">
+				<div class="col-sm-12" ng-bind-html="processEngageWG.config.instructions"></div>
+			</div>
+			<div class="row block-section">
+				<div class="col-sm-4 col-no-padding vertical-scroll col-border-right">
+					<ul class="small list-unstyled list-documents">
+						<li ng-click="" class="row-folder clickable" ng-repeat="row in processEngageWG.config.contents" ng-class="{'active btn-primary': selectedContent[row.reference] === row._id}">
+							<span class="glyphicon glyphicon-play arrow"></span>
+							Project Overview
+						</li>
+<!-- 						TEST DATA -->
+						<li class="row-folder clickable">
+							Project Description
+						</li>
+						<li class="row-folder clickable">
+							Value Component: Bats
+						</li>
+<!-- 						TEST DATA -->
+					</ul>
+				</div>
+				<div class="col-sm-8 vertical-scroll-padded">
+					<p>Selected Content</p>
+				</div>
+			</div>
+		</div>
 	</div>
 
+	<div class="block-content block-stacked">
+		<div class="panel-body">
+			<div class="row">
+				<div class="col-sm-8">
+					<div class="form-group">
+						<label class="control-label">Your Response To Selected Item</label>
+						<textarea ui-tinymce="{statusbar: false, menubar: ''}" rows="10" ng-model="processEngageWG.config.instructions" class="form-control"></textarea>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<label class="control-label">Supporting Documents</label>
+					<div class="well well-sm">
+						Document List with Upload / Link
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 text-right">
+					<a href class="btn btn-primary">Save</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="block-content">
+		<div class="panel-body no-vertical-padding">
+			<div class="row">
+				<div class="col-sm-4 col-no-padding vertical-scroll col-border-right">
+					<ul class="small list-unstyled list-documents">
+						<li class="row-folder" ng-repeat="row in ['admin', 'project-team', 'working-group', 'first-nations', 'consultant']" ng-class="{'active btn-primary': selectedContent[row.reference] === row}">
+							<span class="glyphicon glyphicon-play arrow"></span>
+							{{ row }}
+						</li>
+<!-- 						TEST DATA -->
+						<li class="row-folder row-folder-depth-2 clickable">
+							User 1
+						</li>
+						<li class="row-folder row-folder-depth-2 clickable">
+							User 2
+						</li>
+<!-- 						TEST DATA -->
+					</ul>
+				</div>
+
+				<div class="col-sm-8 vertical-scroll-padded">
+					<label class="control-label">Working Group User Response</label>
+					<p></p>
+					<label class="control-label">Documents Associated with this Reponse</label>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+</section>
+
+
+
+
+
+</section> <!-- /panel -->
+
+<section class="panel panel-default">
+	<div class="block-content">
+		<h3>Notify Working Group</h3>
+		<tmpl-notifications x-project=""></tmpl-notifications>
+	</div>
 </section> <!-- /panel -->
