Engage Work Group, Project Desc

--- a/modules/activities/processes/engage-wg-config/client/engage-wg-config.html
+++ b/modules/activities/processes/engage-wg-config/client/engage-wg-config.html
@@ -60,7 +60,7 @@
 				</div>
 				<div class="col-sm-6">
 					<label class="control-label">Instructions to Working Group</label>
-					<textarea ui-tinymce="{statusbar: false, menubar: ''}" rows="6" ng-model="processEngageWGConfig.config.instructions" class="form-control"></textarea>
+					<textarea rows="6" ng-model="processEngageWGConfig.config.instructions" class="form-control"></textarea>
 				</div>
 
 			</div>
