--- a/modules/activities/processes/engage-wg/client/engage-wg.html
+++ b/modules/activities/processes/engage-wg/client/engage-wg.html
@@ -1,74 +1,4 @@
 <section class="panel panel-default">
-	<div class="block-content">
-		<h3>Working Group Engagement</h3>
-
-		<div class="panel-body">
-			<!-- START/END DATE -->
-			<div class="row">
-				<div class="col-sm-3">
-					<div class="form-group">
-						<label class="control-label">Content for Review</label>
-						<select ng-model="processEngageWG.config.content" class="form-control">
-							<option value="projectdescription">Project Description</option>
-							<option value="draftair">Draft AIR</option>
-							<option value="air">AIR</option>
-							<option value="application">Application</option>
-						</select>
-					</div>
-					<div class="form-group">
-						<label class="control-label">Working Group Session Open</label>
-
-						<div class="input-group">
-							<input type="text"
-								class="form-control text-center"
-								ng-model="processEngageWG.config.dateOpen"
-								ng-disabled="1"/>
-							<div x-modal-date-picker
-								x-selected-date="processEngageWG.config.dateOpen"
-								class="input-group-addon btn-default">
-							<i class="glyphicon glyphicon-calendar"></i></div>
-						</div>
-										
-					</div>
-					<div class="form-group">
-						<label class="control-label">Working Group Session Close</label>
-
-						<div class="input-group">
-							<input type="text"
-								class="form-control text-center"
-								ng-model="processEngageWG.config.dateClose"
-								ng-disabled="1"/>
-							<div x-modal-date-picker
-								x-selected-date="processEngageWG.config.dateClose"
-								class="input-group-addon btn-default">
-							<i class="glyphicon glyphicon-calendar"></i></div>
-						</div>
-
-					</div>
-				</div>
-				<div class="col-sm-3">
-					<label class="control-label">Select Applicable Roles</label>
-					<div class="well well-sm">
-						<ul class="list-unstyled task-list">
-							<li ng-repeat="role in ['admin', 'project-team', 'working-group', 'first-nations', 'consultant']">
-								<button class="btn btn-block btn-sm btn-layer btn-default"
-									ng-click="processEngageWG.chosenRoles[role] = !processEngageWG.chosenRoles[role]"
-									ng-class="{'btn-success': processEngageWG.chosenRoles[role]}">{{ role }}</button>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-sm-6">
-					<label class="control-label">Instructions to Working Group</label>
-					<textarea ui-tinymce="{statusbar: false, menubar: ''}" rows="6" ng-model="processEngageWG.config.instructions" class="form-control"></textarea>
-				</div>
-
-			</div>
-		</div>
-	</div>
-</section>
-
-<section class="panel panel-default">
 	<div class="block-content block-stacked">
 		<h3>Content for Review</h3>
 
@@ -106,7 +36,7 @@
 				<div class="col-sm-8">
 					<div class="form-group">
 						<label class="control-label">Your Response To Selected Item</label>
-						<textarea ui-tinymce="{statusbar: false, menubar: ''}" rows="10" ng-model="processEngageWG.config.instructions" class="form-control"></textarea>
+						<textarea rows="10" ng-model="processEngageWG.config.instructions" class="form-control"></textarea>
 					</div>
 				</div>
 				<div class="col-sm-4">
