--- a/modules/email-templates/controls/invitations/client/invitations.html
+++ b/modules/email-templates/controls/invitations/client/invitations.html
@@ -1,94 +1,75 @@
 <div class="panel-body">
-	<ul class="nav nav-pills nav-justified" ng-init="form.curTab = 'Content'">
-		<li role="presentation" ng-class="{'active':form.curTab === 'Content'}"><a href ng-click="form.curTab = 'Content'">Content</a></li>
-		<li role="presentation" ng-class="{'active':form.curTab === 'Schedule'}"><a href ng-click="form.curTab = 'Schedule'">Schedule</a></li>
-		<li role="presentation" ng-class="{'active':form.curTab === 'Recipients'}"><a href ng-click="form.curTab = 'Recipients'">Recipients <span title="Receiving Digital">({{ form.recipEmail || 0 }})</span> <span title="Receiving Traditional Mail">({{ form.recipMail || 0}})</span></a></li>
-	</ul>
-      <div ng-show="form.curTab === 'Content'">
-          <hr/>
-          <div class="row">
-              <div class="col-sm-12">
-                  <div class="form-inline form-group">
-                      <label class="control-label" for="template">Template</label>
-                      <select type="text" id="template" class="form-control" ng-options="tmp as tmp.name for tmp in taskInvitations.templates track by tmp.code" ng-change="taskInvitations.setContent()" ng-model="taskInvitations.selectedTemplate"></select>
-                  </div>
-                  <textarea ui-tinymce rows="10" ng-model="taskInvitations.taskData.content" class="form-control"></textarea>
-              </div>
+  <ul class="nav nav-pills nav-justified" ng-init="form.curTab = 'Content'">
+    <li role="presentation" ng-class="{'active':form.curTab === 'Content'}"><a href ng-click="form.curTab = 'Content'">Content</a>
+    </li>
+    <li role="presentation" ng-class="{'active':form.curTab === 'Recipients'}"><a href
+                                                                                  ng-click="form.curTab = 'Recipients'">Recipients</a>
+    </li>
+  </ul>
+  <div ng-show="form.curTab === 'Content'">
+    <hr/>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="form-inline form-group">
+          <label class="control-label" for="template">Template</label>
+          <select type="text" id="template" class="form-control"
+                  ng-options="tmp as tmp.name for tmp in taskInvitations.templates track by tmp.code"
+                  ng-change="taskInvitations.setContent()" ng-model="taskInvitations.selectedTemplate"></select>
+          <div>
+            <label for="subject" class="control-label">Subject</label>
+            <input id="subject" name="subject" type="text" class="form-control"
+                   ng-model="taskInvitations.taskData.subject"/>
           </div>
+        </div>
+        <textarea ui-tinymce rows="10" ng-model="taskInvitations.taskData.content" class="form-control"></textarea>
       </div>
-      <div ng-show="form.curTab === 'Schedule'">
-      <hr/>
-          <div class="row">
-              <div class="col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
+    </div>
 
-                  <div class="form-group">
-                      <label class="control-label" for="scheduledDate">Send On</label>
-                      <div class="input-group">
-                          <input type="text" class="form-control text-center" ng-model="taskInvitations.taskData.dateQueued" ng-disabled="1"/>
-                          <div x-modal-date-picker x-selected-date="taskInvitations.taskData.dateQueued" class="input-group-addon btn-default"><i class="glyphicon glyphicon-calendar"></i></div>
-                      </div>
-                  </div>
-
-                  <div class="form-group text-center" ng-if="taskInvitations.taskData.status === 'pending' && taskNotifications.taskData.dateQueued" >
-                      <a class="btn btn-success" href ng-click="taskInvitations.taskData.status = 'queued'">Add to Queue</a>
-                  </div>
-
-                  <div class="form-group text-center" ng-if="taskInvitations.taskData.status === 'queued'" >
-                      <a class="btn btn-warning" href ng-click="taskInvitations.taskData.status = 'pending'">Remove from Queue</a>
-                  </div>
-
-                  <div class="form-group text-center" ng-if="taskInvitations.taskData.status === 'sent'" >
-                      <p ng-if="taskInvitations.taskData.status === 'sent'">Sent on {{ taskInvitations.taskData.dateSent  | amDateFormat:'MMM Do, YYYY hh:mm a' }}</p>
-                  </div>
-
-              </div>
-          </div>
-      </div>
-      <div ng-show="form.curTab === 'Recipients'">
-      <hr/>
-          <div class="row">
-              <div class="col-sm-12 text-right small">
-                  <a href x-modal-select-users x-users="taskInvitations.customRecipients" x-project="taskInvitations.project">Add Recipients</a> | <a href x-modal-recipient-list x-users="taskNotifications.mailOut">Get Addresses</a>
-              </div>
-          </div>
-          <div class="row" ng-repeat="(role, list) in taskInvitations.recipients">
-              <div class="col-sm-6">
-                  <div ng-if="list.viaEmail.length > 0">
-                      <label class="control-label">{{ role }} By Email</label>
-                      <div class="well well-sm">
-                          <ul class="list-unstyled no-lower-margin">
-                              <li ng-repeat="user in list.viaEmail" ng-init="form.recipEmail = (form.recipEmail + 1)">
-                                  <a href x-modal-user-contact-info x-user="user">{{ user.name }} <em class="small">{{ user.role }}</em></a>
-                              </li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-sm-6">
-                  <div ng-if="list.viaMail.length > 0">
-                      <label class="control-label">{{ role }} By Traditional Mail</label>
-                      <div class="well well-sm">
-                          <ul class="list-unstyled no-lower-margin">
-                              <li ng-repeat="user in list.viaMail" ng-init="form.recipMail = (form.recipMail + 1)">
-                                  <a href x-modal-user-contact-info x-user="user">{{ user.name }} <em class="small">{{ user.role }}</em></a>
-                              </li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <hr>
-      <div class="text-right">
-          <div class="pull-left form-control-static" ng-show="taskInvitations.taskData.status === 'queued' && taskInvitations.taskData.dateQueued && !taskInvitations.taskData.dateSent">
-              Date Queued: {{ taskInvitations.taskData.dateQueued  | amDateFormat:'MMM Do, YYYY hh:mm a' }}
-          </div>
-          <div class="pull-left form-control-static" ng-show="taskInvitations.taskData.dateSent">
-              Date Sent: {{ taskInvitations.taskData.dateSent  | amDateFormat:'MMM Do, YYYY hh:mm a' }}
-          </div>
-          <a class="btn btn-default" href ng-click="taskInvitations.saveProcess()">Save</a>
-          <a class="btn btn-primary" href ng-show="form.curTab === 'Content'" ng-click="form.curTab = 'Schedule'">Next</a>
-          <a class="btn btn-primary" href ng-show="form.curTab === 'Schedule'" ng-click="form.curTab = 'Recipients'">Next</a>
-          <a class="btn btn-success" href ng-show="form.curTab === 'Recipients' && taskInvitations.taskData.status === 'pending' && taskInvitations.taskData.dateQueued">Add to Queue</a>
-      </div>
   </div>
+  <div ng-show="form.curTab === 'Recipients'">
+    <hr/>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="form-inline form-group">
+          <label class="control-label" for="role">Role</label>
+          <select type="text" id="role" class="form-control"
+                  ng-options="r as r for r in taskInvitations.roles"
+                  ng-change="taskInvitations.setUsers()" ng-model="taskInvitations.selectedRole"></select>
+          <div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6">
+      <div class="well well-sm">
+        <ul class="list-unstyled no-lower-margin">
+          <li ng-repeat="user in taskInvitations.users | orderBy:['displayName','username', 'email']">
+            <button class="btn btn-block btn-sm btn-layer" ng-click="taskInvitations.moveUser(user)">{{ user.displayName || user.username || user.email }} <em class="small">{{ user.email }}</em></button>
+          </li>
+          <li ng-if="taskInvitations.users.length === 0" class="small">
+            No users in role, or all in Recipients list.
+          </li>
+        </ul>
+      </div>
+    </div>
+      <div class="col-sm-6">
+        <div class="well well-sm">
+          <ul class="list-unstyled task-list">
+            <li ng-repeat="user in taskInvitations.selected | orderBy:['displayName','username', 'email']">
+              <button class="btn btn-block btn-sm btn-layer" ng-click="taskInvitations.moveUser(user)">{{ user.displayName || user.username || user.email }} <em class="small">{{ user.email }}</em></button>
+            </li>
+            <li class="no-lower-padding small" ng-if="taskInvitations.selected.length === 0">
+              Select users from left column to add to Recipients list.
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <div class="text-right">
+    <a class="btn btn-default" href ng-click="taskInvitations.sendInvitations()">Send</a>
+    <a class="btn btn-primary" href ng-show="form.curTab === 'Content'" ng-click="form.curTab = 'Recipients'">Next</a>
+  </div>
+</div>
