--- a/modules/email-templates/controls/invitations/client/invitations.html
+++ b/modules/email-templates/controls/invitations/client/invitations.html
@@ -43,7 +43,7 @@
     <div class="row">
       <div class="col-sm-6">
       <div class="well well-sm">
-        <ul class="list-unstyled no-lower-margin">
+        <ul class="list-unstyled task-list">
           <li ng-repeat="user in taskInvitations.users | orderBy:['displayName','username', 'email']">
             <button class="btn btn-block btn-sm btn-layer" ng-click="taskInvitations.moveUser(user)">{{ user.displayName || user.username || user.email }} <em class="small">{{ user.email }}</em></button>
           </li>
@@ -69,7 +69,7 @@
   </div>
   <hr>
   <div class="text-right">
-    <a class="btn btn-default" href ng-click="taskInvitations.sendInvitations()">Send</a>
+    <a class="btn btn-default" href ng-show="taskInvitations.canSend()" ng-click="taskInvitations.sendInvitations()">Send</a>
     <a class="btn btn-primary" href ng-show="form.curTab === 'Content'" ng-click="form.curTab = 'Recipients'">Next</a>
   </div>
 </div>
